Bug 141419 - UI: Missing Backcolor in Preview of conditional format dialog
Summary: UI: Missing Backcolor in Preview of conditional format dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.1.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-04-01 09:31 UTC by riesslibo
Modified: 2021-04-26 14:55 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of wrong preview in conditional format dialog (55.06 KB, image/jpeg)
2021-04-01 09:32 UTC, riesslibo
Details
example for cond form dialog preview fault (7.46 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-04-01 10:14 UTC, riesslibo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description riesslibo 2021-04-01 09:31:58 UTC
Description:
If a cell style have a backcolor not equal to white it is not displayed in the cell preview in the conditional format dialog, e.g. if you choose the cell style Fault the preview is blank because of a white font color and not showing the red back color see attached screenshot

Steps to Reproduce:
1.Open a new document n calc, fill a cell with a value
2.select that cell and then Format->Conditional Format -> Condition
3.define any condition and try to select a cell style with another back color as white e.g. Fault

Actual Results:
nothing is displayed in the preview field of that cell in the dialog (beause of white font color and white backcolor)

Expected Results:
the backcolor defined in the cell style should be displayed as well 


Reproducible: Always


User Profile Reset: No



Additional Info:
see attached screenshot

Version: 7.1.1.2 (x64) / LibreOffice Community
Build ID: fe0b08f4af1bacafe4c7ecc87ce55bb426164676
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 1 riesslibo 2021-04-01 09:32:42 UTC
Created attachment 170890 [details]
screenshot of wrong preview in conditional format dialog
Comment 2 Xisco Faulí 2021-04-01 10:06:52 UTC
I can't reproduce it in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: c088d26578d1be352efa49bd164a8217627648de
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Xisco Faulí 2021-04-01 10:07:56 UTC
Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. 
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)
Comment 4 riesslibo 2021-04-01 10:14:43 UTC
Created attachment 170891 [details]
example for cond form dialog preview fault

see attached exampleCellB3.ods

Open it, see B3 as conditional formatted with cell style Fault (in german "Fehler"). 

Now goto menu Format->Conditional Format -> Manage
Click on condition for B3, see that there is no preview in the condition with the cell style Fault ("Fehler")
Comment 5 Xisco Faulí 2021-04-01 10:40:07 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6f3899b27156591e65f62649a92c727eb6f5dd03

author	Heiko Tietze <tietze.heiko@gmail.com>	2020-10-29 15:03:44 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-11-03 22:02:24 +0100
commit 6f3899b27156591e65f62649a92c727eb6f5dd03 (patch)
tree 742b41745e770fbf73ada4d5cea395a262219813
parent 2a7a62c09582ec24247022a94e929610d141a4c9 (diff)
Resolves tdf#137059 - Use application colors for font preview

Bisected with: bibisect-linux64-7.1

Adding Cc: to Heiko Tietze
Comment 6 Gabriele Ponzo 2021-04-01 13:38:53 UTC
Same behaviour here.

Version: 7.1.1.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: it-IT (it_IT.UTF-8); UI: it-IT
Ubuntu package version: 1:7.1.1~rc2-0ubuntu0.20.04.1~lo1
Calc: threaded
Comment 7 Xisco Faulí 2021-04-21 14:23:45 UTC
@Caolán, i thought you might be interested in this issue
Comment 8 Caolán McNamara 2021-04-21 14:58:36 UTC
I feel https://gerrit.libreoffice.org/c/core/+/114444 will continue to achieve the original goal of tdf#137059 but restore that an explicit set background in the input set of properties, as used in this example, is used as bg
Comment 9 Commit Notification 2021-04-21 18:47:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/41145efffe9d5af358a52b9e114bb01b98b3d7c2

tdf#141419 restore use any explicitly set background color in previews

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2021-04-21 18:48:25 UTC
done in main, backport to 7-1 in gerrit
Comment 11 Xisco Faulí 2021-04-22 07:57:12 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 41145efffe9d5af358a52b9e114bb01b98b3d7c2
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 12 Commit Notification 2021-04-22 07:58:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/40868f520f9da24d3eaa5e0489da8657bc8383b4

tdf#141419 restore use any explicitly set background color in previews

It will be available in 7.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 riesslibo 2021-04-24 10:28:28 UTC
Verified in nighly build Win10x64 from 24th April: works.

Thanks for the work and the quick fix!!
Comment 14 Commit Notification 2021-04-26 09:17:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1-3":

https://git.libreoffice.org/core/commit/8aea4386148d65f204f1f4932997d82f99f714fa

tdf#141419 restore use any explicitly set background color in previews

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.