tdf#141419 restore use any explicitly set background color in previews

regression since...

commit 6f3899b27156591e65f62649a92c727eb6f5dd03
Date:   Thu Oct 29 15:03:44 2020 +0100

    Resolves tdf#137059 - Use application colors for font preview

but continue to use the doc-color setting when there isn't an explicit
bg setting in the input propertyset

Change-Id: I531b5ddea7700fcd4a731f32d4830b4d0b767d7b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114418
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>